@startuml lms-db-schema

entity "uzytkownicy" {
  +id_uzytk : INT
  imie : VARCHAR(40)
  nazwisko : VARCHAR(40)
  tyt_nauk : VARCHAR(30)
  login : VARCHAR(80)
  haslo : VARCHAR(40)
  email : VARCHAR(40)
  telefon : INT(9)
  data_urodz : DATE
  status : BOOLEAN
  id_zdjecia : INT
  id_roli : INT
}

entity "zdjecia" {
  +id_zdjecia : INT
  zdjecie : BLOB
  tekst_alt : VARCHAR(20)
  data_wstaw : DATETIME
}

entity "przedmiot" {
  +id_przedm : INT
  kod : VARCHAR(10)
  nazwa : VARCHAR(40)
  id_prow : INT
  limit_miejsc : INT
  opis : VARCHAR(2000)
  war_zalicz : VARCHAR(2000)
  id_okresu : INT
  id_status : INT
}

entity "uczen_przedmiot" {
  +id_oceny : INT
  id_przedm : INT
  id_ucznia : INT
  ocena : INT
  data_wystaw_oc : DATETIME
}

entity "zadania" {
  +id_zadania : INT
  id_przedm : INT
  data_wstaw : DATETIME
  data_pocz : DATETIME
  data_konc : DATETIME
  tresc : BLOB
}

entity "odpowiedzi_zadania" {
  +id_odpowiedzi : INT
  id_zadania : INT
  id_ucznia : INT
  tresc : BLOB
  koment : VARCHAR(300)
  ocena : INT
  data_wstaw : DATETIME
}

entity "role_uzytk" {
  +id_roli : INT
  nazwa : VARCHAR(10)
}

entity "materialy" {
  +id_mater : INT
  id_przedm : INT
  data_wstaw : DATETIME
  lp : INT
  temat : VARCHAR(100)
  material : BLOB
  opis : VARCHAR(300)
  widocznosc : BOOLEAN
}

entity "forum_wpisy" {
  +id_wpis : INT
  id_przedm : INT
  id_uzytk : INT
  temat : VARCHAR(100)
  tresc : VARCHAR(500)
  data_wpis : DATETIME
}

entity "forum_odp" {
  +id_odp : INT
  id_wpis : INT
  id_uzytk : INT
  tresc : VARCHAR(500)
  data_wpis : DATETIME
}

entity "flagi"{
  +id_flagi : INT
  flaga : VARCHAR(14)
}

entity "powiadomienia" {
  +id_powiadom : INT
  id_odbiorcy : INT
  data_wstaw : DATETIME
  tresc : VARCHAR(400)
}

entity "okresy" {
  +id_okresu : INT
  kod : VARCHAR(10)
  data_pocz : DATETIME
  data_konc : DATETIME
}

entity "przedmiot_status" {
  +id_status : INT
  kod : VARCHAR(3)
  nazwa : VARCHAR(10)
}

entity "raport" {
  +id_raportu : INT
  id_uzytk : INT
  nazwa : VARCHAR(50)
  data_wystaw : DATETIME
  raport : BLOB
}

uzytkownicy ||--|| zdjecia
role_uzytk ||--|{ uzytkownicy : ma role
przedmiot }|--|{ uzytkownicy : prowadzi
uczen_przedmiot ||--|| przedmiot
uczen_przedmiot ||--|| uzytkownicy : uczen
zadania }|--|| przedmiot
odpowiedzi_zadania }|--|{ zadania
odpowiedzi_zadania }|--|| uzytkownicy : uczen
materialy }|--|| przedmiot
forum_wpisy }|--|| przedmiot
forum_wpisy }|--|| uzytkownicy : autor
forum_odp }|--|| forum_wpisy
forum_odp }|--|| uzytkownicy : autor
powiadomienia }|--|| uzytkownicy : odbiorca
flagi ||--|{ powiadomienia
okresy ||--|{ przedmiot
przedmiot_status ||--|{ przedmiot
raport }|--|| uzytkownicy

@enduml
